# tsvc

./: .project  .pydevproject  README.md  pyproject.toml
src/thalesians/: __init__.py  tsvc.py
src/thalesians/tsvc/: __init__.py  deltas.py
src/thalesians/tsvc/caches/: __init__.py  in_memory_cache.py  pickle_cache.py
src/thalesians/tsvc/delta_logs/: __init__.py  in_memory_delta_log.py  pickle_delta_log.py
src/thalesians/tsvc/deltalogs/: inmemorydeltalog.py  pickledeltalog.py
src/thalesians/tsvc/meta_data/: __init__.py  dict_meta_data.py
src/thalesians/tsvc/meta_data_caches/: __init__.py  in_memory_meta_data_cache.py  pickle_meta_data_cache.py
src/thalesians/tsvc/revision_caches/: __init__.py  in_memory_revision_cache.py  pickle_revision_cache.py
src/thalesians/tsvc/store/: __init__.py  pickle_store.py
src/thalesians/tsvc/ts_impls/: __init__.py  pandas_ts_impl.py  polars_ts_impl.py
src/thalesians/tsvc/tsimpls/: pandastsimpl.py
src/thalesians/tsvc/vc/: __init__.py
src/tsvc/: __init__.py
test/: test_in_memory_delta_log.py  test_in_memory_delta_log_pandas_ts_impl.py  test_in_memory_delta_log_polars_ts_impl.py  test_inmemorydeltalog.py  test_pickle_delta_log.py  test_pickle_store.py  test_pickledeltalog.py  test_tsvc.py
