[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thalesians.tsvc"
version = "0.0.1"
authors = [
	{ name="Paul Alexander Bilokon", email="paul@thalesians.com" },
]
description = "A lightweight, efficient version control system specifically designed for time series data"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/thalesians/tsvc/"
Issues = "https://github.com/thalesians/tsvc/issues"
